# I483-Smart-Embedded-System-Development

./: .gitignore  README.md  mpython_flash.sh
assignment01/multi/: a_multi.py  sync.sh
assignment01/scd41/mpython/: a_scd41.py  scd41.py  sync.sh
assignment02/: mqtt_pub.py  mqtt_sub.py  sync.sh
assignment02/i483-kafka-publisher/: Cargo.toml  README.md
assignment02/i483-kafka-publisher/src/: cli.rs  kafka.rs  main.rs  worker.rs
assignment02/i483-mqtt-subscriber/: Cargo.toml  run.sh
assignment02/i483-mqtt-subscriber/src/: cli.rs  main.rs  mqtt.rs
practice00/: sync.sh
practice01/: practice_bmp180.py  sync.sh
