[package]
name = "i483-mqtt-subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.24.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros", "time"] }
futures = "0.3.30"
rand = "0.9.0-alpha.1"
